# sql-case-studies

./: .env.example  .gitignore  README.md  pyproject.toml
case_study_1/: schema.sql  solution.ipynb
case_study_2/: schema.sql  solution.ipynb
